@@ -1,0 +1,3 @@
+
+igraph.i.have.fmemopen <- 1
+igraph.i.have.open.memstream <- 1
